[package]
name = "polkadot-collator"
version = "0.8.11"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-service = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service", optional = true}
polkadot-service-new = { path = "../node/service", optional = true }
log = "0.4.8"
tokio = "0.2.13"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.3.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }

[features]
default = ["service-old"]
service-old = [ "polkadot-service" ]
service-rewr = [ "polkadot-service-new" ]
