[package]
name = "polkadot-rpc"
version = "0.8.11"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"}
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"}
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
