[package]
name = "polkadot-network-test"
version = "0.8.11"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"], branch = "bkchr-sync-stuff-fixes" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
