[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-light = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes", features = ["test-helpers"],  default-features = false }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
polkadot-test-runtime = { path = ".." }
polkadot-runtime-common = { path = "../../common" }
polkadot-primitives = { path = "../../../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "bkchr-sync-stuff-fixes" }
futures = "0.3.1"
